dogcat 따라치기 추가

--- a/catdog.ipynb
+++ b/catdog.ipynb
@@ -2,61 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a492b0cb",
+   "execution_count": 1,
+   "id": "8cc46db0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: keras in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (2.4.3)\n",
-      "Requirement already satisfied: scipy>=0.14 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (1.7.0)\n",
-      "Requirement already satisfied: pyyaml in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (5.4.1)\n",
-      "Requirement already satisfied: numpy>=1.9.1 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (1.19.5)\n",
-      "Requirement already satisfied: h5py in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (3.1.0)\n",
+      "Requirement already satisfied: keras in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (2.4.3)\n",
+      "Requirement already satisfied: numpy>=1.9.1 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (1.19.5)\n",
+      "Requirement already satisfied: h5py in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (3.1.0)\n",
+      "Requirement already satisfied: scipy>=0.14 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (1.7.0)\n",
+      "Requirement already satisfied: pyyaml in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from keras) (5.4.1)\n",
       "\u001b[33mWARNING: You are using pip version 19.2.3, however version 21.1.3 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already satisfied: tensorflow in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (2.5.0)\n",
-      "Requirement already satisfied: flatbuffers~=1.12.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.12)\n",
-      "Requirement already satisfied: absl-py~=0.10 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.13.0)\n",
-      "Requirement already satisfied: numpy~=1.19.2 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.19.5)\n",
-      "Requirement already satisfied: google-pasta~=0.2 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.2.0)\n",
-      "Requirement already satisfied: tensorflow-estimator<2.6.0,>=2.5.0rc0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (2.5.0)\n",
-      "Requirement already satisfied: opt-einsum~=3.3.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.3.0)\n",
-      "Requirement already satisfied: h5py~=3.1.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.1.0)\n",
-      "Requirement already satisfied: termcolor~=1.1.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.1.0)\n",
-      "Requirement already satisfied: keras-nightly~=2.5.0.dev in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (2.5.0.dev2021032900)\n",
-      "Requirement already satisfied: protobuf>=3.9.2 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.17.3)\n",
-      "Requirement already satisfied: grpcio~=1.34.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.34.1)\n",
-      "Requirement already satisfied: astunparse~=1.6.3 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.6.3)\n",
-      "Requirement already satisfied: wrapt~=1.12.1 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.12.1)\n",
-      "Requirement already satisfied: gast==0.4.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.4.0)\n",
-      "Requirement already satisfied: keras-preprocessing~=1.1.2 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.1.2)\n",
-      "Requirement already satisfied: tensorboard~=2.5 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (2.5.0)\n",
-      "Requirement already satisfied: typing-extensions~=3.7.4 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.7.4.3)\n",
-      "Requirement already satisfied: six~=1.15.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.15.0)\n",
-      "Requirement already satisfied: wheel~=0.35 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.36.2)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (2.25.1)\n",
-      "Requirement already satisfied: setuptools>=41.0.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (41.2.0)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (0.6.1)\n",
-      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (1.8.0)\n",
-      "Requirement already satisfied: google-auth<2,>=1.6.3 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (1.33.1)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (3.3.4)\n",
-      "Requirement already satisfied: werkzeug>=0.11.15 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (2.0.1)\n",
-      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (0.4.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (1.26.4)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (4.0.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (2020.12.5)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (2.10)\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (0.2.8)\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4; python_version >= \"3.6\" in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (4.7.2)\n",
-      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (4.2.2)\n",
-      "Requirement already satisfied: requests-oauthlib>=0.7.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow) (1.3.0)\n",
-      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (0.4.8)\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in ./.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow) (3.1.1)\n",
+      "Requirement already satisfied: tensorflow in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (2.5.0)\n",
+      "Requirement already satisfied: protobuf>=3.9.2 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.17.3)\n",
+      "Requirement already satisfied: astunparse~=1.6.3 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.6.3)\n",
+      "Requirement already satisfied: grpcio~=1.34.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.34.1)\n",
+      "Requirement already satisfied: six~=1.15.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.15.0)\n",
+      "Requirement already satisfied: keras-preprocessing~=1.1.2 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.1.2)\n",
+      "Requirement already satisfied: h5py~=3.1.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.1.0)\n",
+      "Requirement already satisfied: wheel~=0.35 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.36.2)\n",
+      "Requirement already satisfied: absl-py~=0.10 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.13.0)\n",
+      "Requirement already satisfied: termcolor~=1.1.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.1.0)\n",
+      "Requirement already satisfied: flatbuffers~=1.12.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.12)\n",
+      "Requirement already satisfied: typing-extensions~=3.7.4 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.7.4.3)\n",
+      "Requirement already satisfied: tensorboard~=2.5 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (2.5.0)\n",
+      "Requirement already satisfied: opt-einsum~=3.3.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (3.3.0)\n",
+      "Requirement already satisfied: numpy~=1.19.2 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.19.5)\n",
+      "Requirement already satisfied: gast==0.4.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.4.0)\n",
+      "Requirement already satisfied: tensorflow-estimator<2.6.0,>=2.5.0rc0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (2.5.0)\n",
+      "Requirement already satisfied: google-pasta~=0.2 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (0.2.0)\n",
+      "Requirement already satisfied: wrapt~=1.12.1 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (1.12.1)\n",
+      "Requirement already satisfied: keras-nightly~=2.5.0.dev in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorflow) (2.5.0.dev2021032900)\n",
+      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (0.4.4)\n",
+      "Requirement already satisfied: google-auth<2,>=1.6.3 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (1.33.1)\n",
+      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (1.8.0)\n",
+      "Requirement already satisfied: werkzeug>=0.11.15 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (2.0.1)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (2.25.1)\n",
+      "Requirement already satisfied: setuptools>=41.0.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (41.2.0)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (3.3.4)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from tensorboard~=2.5->tensorflow) (0.6.1)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.7.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow) (1.3.0)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (0.2.8)\n",
+      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (4.2.2)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4; python_version >= \"3.6\" in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (4.7.2)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (4.0.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (2020.12.5)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (1.26.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow) (2.10)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow) (3.1.1)\n",
+      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard~=2.5->tensorflow) (0.4.8)\n",
       "\u001b[33mWARNING: You are using pip version 19.2.3, however version 21.1.3 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/goodtool/.pyenv/versions/3.8.1/lib/python3.8/site-packages/pandas/compat/__init__.py:97: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../input'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8ef0cf478ac8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../input\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../input'"
      ]
     }
    ],
@@ -66,16 +85,104 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from keras.preprocessing.image import ImageDataGenerator, load_img\n",
-    "from tensorflow.keras.utils import to_categorical\n"
+    "from tensorflow.keras.utils import to_categorical\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import os\n",
+    "print(os.listdir(\"../input\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "385c530e",
+   "metadata": {},
+   "source": [
+    "## Define Constants"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce8db16a",
+   "id": "38a080da",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "FAST_FUN = false\n",
+    "IMAGE_WIDTH=128\n",
+    "IMAGE_HEIGHT=128\n",
+    "IMAGE_SIZE=(IMAGE_WIDTH, IMAGE_HEIGHT)\n",
+    "IMAGE_CHANNELS=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de6ee08d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Prepare Training Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a3e638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = os.listdir(\"../input/train/train\")\n",
+    "categories = []\n",
+    "for filename in filenames:\n",
+    "    category = filename.split('.')[0]\n",
+    "    if category == 'dog':\n",
+    "        categories.append(1)\n",
+    "    else:\n",
+    "        categories.append(0)\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'filename':filenames,\n",
+    "    'category': categories\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba9b9c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10409515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dd5a1e2",
+   "metadata": {},
+   "source": [
+    "See Total In count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1df05f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['category'].value_counts().plot.bar()"
+   ]
   }
  ],
  "metadata": {
