arg attention이 적용된 seq2seq 추가 필사

--- a/dacon/2021-arg-price/baseline1.ipynb
+++ b/dacon/2021-arg-price/baseline1.ipynb
@@ -706,11 +706,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f14d1f7c-1680-4537-b490-7b9d48aa663a",
+   "cell_type": "markdown",
+   "id": "a4e27b39-e601-42c9-b5d4-3165865a82ea",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 모델\n",
     "어텐션이 적용된 seq2seq 모델\n",
@@ -849,6 +847,298 @@
     "model = Seq2Seq(encoder, decoder, attention)\n",
     "model = model.to(device)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b2866a5-bb3e-4f30-ac8a-308cd15eb72b",
+   "metadata": {},
+   "source": [
+    "### 평가 함수\n",
+    "평가를 위한 nmae 정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0817b698-c556-43ce-a7dc-fe7578ab8eea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_custom_metric(pred, true):\n",
+    "    pred = pred[:, [6,13,27]]\n",
+    "    true = true[:,[6,13,27]]\n",
+    "    target = torch.where(true!=0)\n",
+    "    true = true[target]\n",
+    "    pred = pred[traget]\n",
+    "    score = torch.mean(torch.abs((true-pred)/true))\n",
+    "    \n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f708d686-54b3-4ff1-8609-11e99c261353",
+   "metadata": {},
+   "source": [
+    "### 옵티마이저 및 손실함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "486ef2ab-e446-44d1-be3b-450c0e8ff950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "creterion == nn.L1Loss() # mae\n",
+    "custom_metric = my_custom_metric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d42b4c-6bde-4456-b457-8643e2bd33cb",
+   "metadata": {},
+   "source": [
+    "### 학습 정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ed8051c-61ab-4941-8b76-7dd35d2246c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_step(batch_item, epock, batch, training, teacher_forcing):\n",
+    "    encoder_input = batch_item['encoder_input'].to(device)\n",
+    "    decoder_input = batch_item['decoder_input'].to(device)\n",
+    "    if training is True:\n",
+    "        model.train()\n",
+    "        optimizer.zero_grad()\n",
+    "        with torch.cuda.amp.autocast():\n",
+    "            output = model(encoder_input, decoder_input, teacher_forcing)\n",
+    "            loss = criterion(output, decoder_input[:,1:])\n",
+    "            score = custom_metric(output, decoder_input[:,1:])\n",
+    "        loss.back()\n",
+    "        optimizer.step()\n",
+    "    else:\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            output = model(encoder_input, decoder_input, False)\n",
+    "            loss = creation(output, decoder_input[:,1:])\n",
+    "            score = custom_metrics(output, decoder_input[:,1:])\n",
+    "        return loss, score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73b68b81-eb4a-4b1f-96f9-9e842c4fd949",
+   "metadata": {},
+   "source": [
+    "### 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7da3809-c1bf-40f6-8ee6-023d0cdb121d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_plot, val_loss_plot = [], []\n",
+    "score_plot, val_score_plot = [], []\n",
+    "\n",
+    "for epock in range(EPOCHS):\n",
+    "    total_loss, total_val_loss = 0,0\n",
+    "    total_score, total_val_score = 0,0\n",
+    "    \n",
+    "    tqdm_dataset = tqdm(enumerate(train_dataloader))\n",
+    "    training = True\n",
+    "    for batch, batch_item in tqdm_dataset:\n",
+    "        batch_loss, batch_score = train_step(batch_item, epock, batch, training, teacher_forcing)\n",
+    "        total_loss += batch_loss\n",
+    "        total_score += batch_score\n",
+    "        \n",
+    "        tqdm_dataset.set_postfix({\n",
+    "            'Epoch': epoch + 1,\n",
+    "            'Loss': '{:06f}'.format(batch_loss.item()),\n",
+    "            'Total Loss': '{:06f}'.format(total_loss/(batch+1)),\n",
+    "            'Score': '{:06f}'.format(batch_score.item()),\n",
+    "            'Total Score': '{:06f}'.format(total_score/(batch+1)),\n",
+    "        })\n",
+    "    loss_plot.append(total_loss/(batch+1))\n",
+    "    score_plot.append(total_score/(batch+1))\n",
+    "\n",
+    "    tqdm_dataset = tqdm(enumerate(val_dataloader))\n",
+    "    training = False\n",
+    "    for batch, batch_item in tqdm_dataset:\n",
+    "        batch_loss, batch, val_score = train_step(batch_item, epoch, batch, training, teacher_forcing)\n",
+    "        total_val_loss += batch_loss\n",
+    "        total_val_score += batch_val_score\n",
+    "\n",
+    "        tqdm_dataset.set_postfix({\n",
+    "            'Epoch': epoch + 1,\n",
+    "            'Loss': '{:06f}'.format(batch_loss.item()),\n",
+    "            'Total Loss': '{:06f}'.format(total_loss/(batch+1)),\n",
+    "            'Score': '{:06f}'.format(batch_score.item()),\n",
+    "            'Total Score': '{:06f}'.format(total_score/(batch+1)),\n",
+    "        })\n",
+    "    val_loss_plot.append(total_val_loss/(batch+1))\n",
+    "    val_score_plot.append(total_val_score/(batch+1))\n",
+    "    \n",
+    "    if np.min(val_loss_plot) == val_loss_plot[-1]:\n",
+    "        torch.save(model.save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14f311da-c2fd-4486-b403-115352ba9284",
+   "metadata": {},
+   "source": [
+    "### 학습 결과"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d821c1-7b54-4aa6-bea4-276359d2456e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(loss_plot, label='train_loss')\n",
+    "plt.plot(val_loss_plot, label='val_loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.ylabel('loss(mae)')\n",
+    "plt.title('loss_plot')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(score_plot, 'train_score')\n",
+    "plt.plot(val_score_plot, label='val_score')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.ylabel('score(name)')\n",
+    "plt.title('score_plot')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0cb054b-7a34-4dbf-8fe7-6ba5e84b23c8",
+   "metadata": {},
+   "source": [
+    "### 베스트모델 복원"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1170b714-3f4e-4d67-92f1-bec4f4dc5b3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = torch.load(save_path)\n",
+    "model = model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "192c4262-1ded-49e6-b899-5f1e4663a6de",
+   "metadata": {},
+   "source": [
+    "## 추론 및 제출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fbf1d2c-73d6-495b-904b-c2fd77c7f7d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(encoder_input):\n",
+    "    model.train()\n",
+    "    encoder_input = encoder_input.to(device)\n",
+    "    decoder_input = torch.zeros([1, future_size+1, target_n], dtype=torch.float32).to(device)\n",
+    "    with torch.no_grad():\n",
+    "        output = model(encoder_input, decoder_input, False)\n",
+    "    return output.cpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7e149ff-2697-43e1-bccc-abd924194010",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.read_csv('./data/sample_submission.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfc32783-4357-48f5-bc81-031784799cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public_date_list = submission[submission['예측대상일자'].str.contains('2020')]['예측대상일자'].str.split('+').str[0].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "432960c5-8ad1-4606-a8dc-51e63dfc1f5f",
+   "metadata": {},
+   "source": [
+    "### 추론"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca3c957c-dfbc-4b17-8fe9-dfa5ccadc35c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs = []\n",
+    "torch_norm = torch.tensor(norm.to_numpy()[2::2])\n",
+    "for date in public_date_list:\n",
+    "    test_df = pd.read_csv(f'./data_public_data_test_files/test_{date}.csv')\n",
+    "    data = pd.read_csv('./data/public_data/train.csv')\n",
+    "    data = pd.concat([data, test_df]).iloc[-window_size:]\n",
+    "    \n",
+    "    week_day_map = {}\n",
+    "    for i, d in enumerate(data['요일'].unique()):\n",
+    "        week_day_map[d] = i\n",
+    "    data['요일'] = data['요일'].map(week_day_map)\n",
+    "    data = data.iloc[:,1:]/norm\n",
+    "    \n",
+    "    encoder_input = torch.tensor(data.to_numpy(), dtype=torch.float32)\n",
+    "    encoder_input = encoder_input.unsqueeze(0)\n",
+    "    output = predict(encoder_input)*torch_norm\n",
+    "    \n",
+    "    idx = submission[submission['예측대상일자'].str.contains(date)].index\n",
+    "    submission[idx, '배추_가격(원/kg)':] = output[0, [6,13,27]].numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39dc8abf-7b56-436d-acd5-1ffacb2ce244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission.to_csv('dacon_baseline.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c96384e-079a-4130-95bd-80a7e9dc71a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
