--- a/dacon/2021-arg-price/baseline1.ipynb
+++ b/dacon/2021-arg-price/baseline1.ipynb
@@ -177,7 +177,14 @@
     "y_data[]\n",
     "for i in range(data.shapre[0] - window_size - future_size):\n",
     "    x = data.iloc[i:i+window_size, 1:].to_numpy()\n",
-    "    y = data.iloc[i+window_size:i+i+window_size+future_size, 3::2].to_numpy()"
+    "    y = data.iloc[i+window_size:i+i+window_size+future_size, 3::2].to_numpy()\n",
+    "    y_0 = np.zeros([1, y.shape[1]])\n",
+    "    x_data.append(x)\n",
+    "    y_data.append(np.concatenate([y_0, y], axis=0))\n",
+    "x_data = np.array(x_data)\n",
+    "y_data = np.array(y_data)\n",
+    "\n",
+    "                  "
    ]
   }
  ],
@@ -197,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
